Fixed route responses and implemented OpponentStrength
